Add styles to make row in expandable table not expandable

--- a/src/sass/modules/table/table.scss
+++ b/src/sass/modules/table/table.scss
@@ -158,6 +158,16 @@ $flex-table--header-text:  $color-white;
           }
         }
       }
+      &.not-expandable {
+        cursor: default;
+        li:first-of-type {
+          i { display: none; }
+        }
+
+        &:hover {
+          background-color: inherit;
+        }
+      }
     }
     //Custom table row content
     .table-row--content {
