--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -591,7 +591,7 @@ h2 {
 /* Footer
   ================================================== */
 
-footer {
+footer.example {
 	background-color: $color-background;
 	float: right;
 	position: relative;
