--- a/src/sass/modules/footer/footer.scss
+++ b/src/sass/modules/footer/footer.scss
@@ -1,23 +1,55 @@
-$footer-color: $color-white !default; //Override this variable to change the color of your footer
+// $footer-color: $color-white !default; //Override this variable to change the color of your footer
+//
+// .app-footer {
+// 	background-color: rgba($footer-color, 0.95);
+// 	box-shadow: 0 -2px 30px 0 rgba($color-shadow, 0.16);
+// 	float: left;
+// 	left: 0;
+// 	max-width: 100%;
+// 	padding: 1rem;
+// 	position: absolute;
+// 	width: 100%;
+//
+// 	&.fixed {
+// 		bottom: 0;
+// 		left: 0;
+// 		position: fixed;
+// 		right: 0;
+// 	}
+//
+// 	.row.no-padding {
+// 		max-width: calc(1200px - 2rem);
+// 	}
+// }
 
-.app-footer {
-	background-color: rgba($footer-color, 0.95);
-	box-shadow: 0 -2px 30px 0 rgba($color-shadow, 0.16);
-	float: left;
-	left: 0;
-	max-width: 100%;
-	padding: 1rem;
-	position: absolute;
+$footer-height: 4rem;
+
+html,
+body,
+#application {
+	height: 100%;
+}
+
+.footer {
+	align-items: center;
+
+	border-top: 2px solid $color-border;
+	margin: auto;
+	margin-top: 2rem;
+	// max-width: $global-content-width;
+	max-width: 1200px;
+	padding: $space-m;
 	width: 100%;
+}
 
-	&.fixed {
-		bottom: 0;
-		left: 0;
-		position: fixed;
-		right: 0;
-	}
+.footer-nav {
+	ul {
+		@extend %remove-list-style;
+		display: flex;
+		flex-wrap: wrap;
 
-	.row.no-padding {
-		max-width: calc(1200px - 2rem);
+		li:not(:last-of-type) {
+			margin: 0 $space-l $space-xs 0;
+		}
 	}
 }
