--- a/src/sass/modules/navigation/navigation.scss
+++ b/src/sass/modules/navigation/navigation.scss
@@ -7,6 +7,7 @@ $content-width: $global-content-width;
 $header-height: 4rem;
 $sub-nav-height: 3rem;
 $footer-height: 6rem; //includes padding
+$footer-height_phone: 7rem;
 $nav-separator-width: 2px;
 $global-banner-height: 3.5rem;
 $global-banner-height_phone: 4rem;
@@ -118,9 +119,13 @@ body {
 	margin: auto;
 	max-width: $content-width;
 	-webkit-overflow-scrolling: touch;
-	padding-bottom: $footer-height;
+	padding-bottom: $footer-height_phone;
 	position: relative;
 	z-index: $zindex-content;
+
+	@media #{$tablet} {
+		padding-bottom: $footer-height;
+	}
 }
 
 .sub-nav-container {
