--- a/src/sass/base/extendables/_extendables.scss
+++ b/src/sass/base/extendables/_extendables.scss
@@ -72,3 +72,27 @@
 		min-height: 2rem;
 	}
 }
+
+/* Loading animation
+  =========================================================================== */
+%loading-animation {
+	* {
+		background-color: $color-background;
+		border-radius: 3px;
+		height: 1.25rem;
+		overflow: hidden;
+		position: relative;
+
+		&::after {
+			animation: loadingCard 1.2s infinite;
+			background: linear-gradient(90deg, transparent, rgba($color-black, 0.07), transparent);
+			content: '';
+			display: block;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			transform: translateX(-100%);
+			width: 100%;
+		}
+	}
+}
