--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -251,27 +251,8 @@
 	.card--content,
 	.card-footer,
 	.card--footer {
+		@extend %loading-animation;
 		overflow: hidden;
-
-		* { //Targets all elements inside the card header, content, and footer
-			background-color: $color-background;
-			border-radius: 3px;
-			height: 1.25rem;
-			overflow: hidden;
-			position: relative;
-
-			&::after {
-				animation: loadingCard 1.2s infinite;
-				background: linear-gradient(90deg, transparent, rgba($color-black, 0.07), transparent);
-				content: '';
-				display: block;
-				height: 100%;
-				position: absolute;
-				top: 0;
-				transform: translateX(-100%);
-				width: 100%;
-			}
-		}
 	}
 
 	.card-header,
