--- a/src/sass/experimental/toast.scss
+++ b/src/sass/experimental/toast.scss
@@ -6,11 +6,16 @@
 $toast-width: 300px;
 
 .toast-container {
+	align-items: center;
 	bottom: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	left: 0;
 	overflow: hidden;
 	position: absolute;
 	right: 0;
+	width: 100%;
 	z-index: 3;
 	@media #{$tablet} {
 		bottom: 1rem;
@@ -20,15 +25,20 @@ $toast-width: 300px;
 
 .toast-message {
 	@extend %card-shadow--hover;
-	background-color: $white;
-	border-radius: 0;
-	border-top: 1px solid $blue;
+	background-color: $color-purple;
+	border-radius: 5px;
 	bottom: -130px; //hide by default (for demo)
-	padding: $space-s calc(#{$space-xl} + #{$space-xs});
+	margin: $space-m $space-xl 0 $space-m;
+	padding: $space-s $space-m $space-s calc(#{$space-xl} + #{$space-xs});
 
 	position: relative;
-	width: 100%;
-	p { margin: 0; }
+	width: $toast-width;
+	* { color: $color-white; }
+
+	p {
+		font-weight: $font-weight-semibold;
+		margin: 0;
+	}
 
 	.toast-message--close {
 
@@ -49,36 +59,35 @@ $toast-width: 300px;
 	.toast-message--icon {
 		@extend .dashing-icon;
 		@extend .dashing-icon--info-stroke;
-		@extend .dashing-icon--blue;
+		@extend .dashing-icon--white;
 		left: $space-m;
 		position: absolute;
-		top: $space-s;
+		top: $space-m;
 		@media #{$tablet} { top: $space-m;}
 	}
 
 	&.success {
-		border-color: $green;
+		background-color: $color-green;
 
 		.toast-message--icon {
-			@extend .dashing-icon--green;
 			@extend .dashing-icon--checkmark-filled;
 		}
 	}
 
 	&.warning {
-		border-color: $orange;
+		background-color: $color-orange;
+		* { color: $color-black; }
 
 		.toast-message--icon {
-			@extend .dashing-icon--orange;
+			@extend .dashing-icon--black;
 			@extend .dashing-icon--info-filled;
 		}
 	}
 
 	&.error {
-		border-color: $red;
+		background-color: $color-red;
 
 		.toast-message--icon {
-			@extend .dashing-icon--red;
 			@extend .dashing-icon--alert-filled;
 		}
 	}
@@ -93,21 +102,10 @@ $toast-width: 300px;
 		animation-duration: 4s;
 		animation-name: slideInUpThenOut;
 		animation-timing-function: ease-in-out;
-
-		@media #{$tablet} { animation-name: slideInLeftThenOut; }
 	}
 
-	@media #{$tablet} {
-
-		animation-name: slideInLeftThenOut;
-		border: 1px solid $blue;
-		border-radius: 5px;
-		bottom: 0;
-
-		margin: $space-m $space-xl $space-m $space-m; //Add margin to position if multiple toasts
-		padding: $space-m calc(#{$space-xl} + #{$space-xs});
-		right: calc(-#{$toast-width} - 2.5rem); //hide by default (for demo)
-		width: $toast-width;
+	&.has-close-button {
+		padding: $space-s calc(#{$space-xl} + #{$space-xs});
 	}
 }
 
@@ -134,11 +132,11 @@ $toast-width: 300px;
 	}
 
 	10% {
-		bottom: 0;
+		bottom: 1rem;
 	}
 
 	90% {
-		bottom: 0;
+		bottom: 1rem;
 	}
 
 	100% {
