Remove from experimental folder. Remove from main template.

--- a/src/sass/modules/_modules.scss
+++ b/src/sass/modules/_modules.scss
@@ -19,6 +19,7 @@
 @import 'icons/icons';
 @import 'spinner/spinner';
 @import 'tags/tags';
+@import 'toast/toast';
 @import 'progress-stepper/progress-stepper';
 @import 'lists/lists';
 @import 'accordion/accordion';
