Add width to toast for IE11

--- a/src/sass/modules/toast/toast.scss
+++ b/src/sass/modules/toast/toast.scss
@@ -21,6 +21,7 @@ $toast-bottom-position: 1rem;
 		left: 50%;
 		margin-left: calc(-#{$toast-width} / 2);
 		min-width: $toast-width;
+		width: $toast-width;
 	}
 	* { color: $color-white; }
 
